--- a/Level1.html
+++ b/Level1.html
@@ -36,79 +36,110 @@
 
 
 
-<!--The cards to the memory -->
+<!--The cards to the memory 2 identical cards at each images. -->
 
 <section class="game">
 
-  <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="img/js-badge.svg" alt="Memory Card">
+  <div class="level1">
+    <img class="front-face" src="images/level1/co.png" alt="Co">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
   </div>
 
-   <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="images/level1/level1back.jpg" alt="Memory Card1">
-    </div>
-  
-
-   <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="images/level1/level1back.jpg" alt="Memory Card1">
-    </div>
-  
-
     <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="images/level1/level1back.jpg" alt="Memory Card1">
+    <img class="front-face" src="images/level1/co.png" alt="Co">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
+  </div>
+  
+
+   <div class="cardlevel1">
+    <img class="front-face" src="images/level1/code.png" alt="Code">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
     </div>
   
 
    <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="images/level1/level1back.jpg" alt="Memory Card1">
+    <img class="front-face" src="images/level1/code.png" alt="Code">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
     </div>
   
+  
 
-    <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="images/level1/level1back.jpg" alt="Memory Card1">
+   <div class="cardlevel1">
+    <img class="front-face" src="images/level1/css.png" alt="CSS">
+     <img class="back-face" src="images/level1/html.png" alt="memorycard">
     </div>
   
 
    <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="images/level1/level1back.jpg" alt="Memory Card1">
+    <img class="front-face" src="images/level1/css.png" alt="CSS">
+     <img class="back-face" src="images/level1/html.png" alt="memorycard">
+    </div>
+
+  
+
+   <div class="cardlevel1">
+    <img class="front-face" src="images/level1/github.png" alt="github">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
     </div>
   
 
      <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="images/level1/level1back.jpg" alt="Memory Card1">
+    <img class="front-face" src="images/level1/github.png" alt="github">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
     </div>
   
 
    <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="images/level1/level1back.jpg" alt="Memory Card1">
+    <img class="front-face" src="images/level1/ht.png" alt="ht">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
     </div>
   
 
     <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="images/level1/level1back.jpg" alt="Memory Card1">
+    <img class="front-face" src="images/level1/ht.png" alt="ht">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
+    </div>
+  
+  
+
+   <div class="cardlevel1">
+    <img class="front-face" src="images/level1/java.png" alt="java">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
     </div>
   
 
    <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="images/level1/level1back.jpg" alt="Memory Card1">
+    <img class="front-face" src="images/level1/java.png" alt="java">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
+    </div>
+
+    <div class="cardlevel1">
+    <img class="front-face" src="images/level1/java.png" alt="java">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
     </div>
   
 
-    <div class="cardlevel1">
-    <img class="front-face" src="img/react.svg" alt="React">
-    <img class="back-face" src="images/level1/level1back.jpg" alt="Memory Card1">
+   <div class="cardlevel1">
+    <img class="front-face" src="images/level1/js.png" alt="js">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
     </div>
+
+     <div class="cardlevel1">
+    <img class="front-face" src="images/level1/js.png" alt="js">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
+    </div>
+
+     <div class="cardlevel1">
+    <img class="front-face" src="images/level1/python.png" alt="python">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
+    </div>
+
+       <div class="cardlevel1">
+    <img class="front-face" src="images/level1/python.png" alt="python">
+    <img class="back-face" src="images/level1/html.png" alt="memorycard">
+    </div>
+
+
 
 </section>
 
@@ -140,10 +171,7 @@
                   </div>
 
 
-                    <button id="buttonplay"onclick="playAgain()">
-                    Play again</a>
-                    </button>
-
+            
 
             </div>
         </div>
