--- a/index.html
+++ b/index.html
@@ -10,33 +10,22 @@
 </head>
 <body id="indexpage">
 
-    <div class="header">
-        <header>
+ 
             <h1>Memory Game</h1>
-        </header>
 
 
-      <ul class="List">
+      <ul class="List"> 
 
-         <li><a href="index.html"><button class="button">Home</button></a></li>
-         <li><a href="Level1.html"><button class="button">Level 1</button></a></li>
-        <li><a href="Level2.html"><button class="button">Level 2</button></a></li>
-         <li><a href="Level3.html"><button class="button">Level 3</button></a></li>
-         <li><a href=""><button class="button" onclick="myFunction()">Try it</button></a></li>
-
-        
-
-         <script>
-        function myFunction() {
-        alert("I am an alert box!");
-
-        </script>
+         <li><a href="Level1.html"><button class="button"><h2>Level 1</h2></button></a></li>
+        <li><a href="Level2.html"><button class="button"><h2>Level 2</h2></button></a></li>
+         <li><a href="Level3.html"><button class="button"><h2>Level 3</h2></button></a></li>
+         <br>
+         <li><button class="button" onclick="myFunction()"><h2>How to play</h2></button></a></li>
 
      
     </ul>
+<script src="index.js"></script>
 
-    </div>
- 
 
 </body>
 </html>
