--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-     <link rel="stylesheet" href="C:\Users\mysan\OneDrive\Skrivbord\projektcode\style.css" type="text/css">
+     <link rel="stylesheet" href="style.css" type="text/css">
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </head>
@@ -19,14 +19,14 @@
        
       <ul class="List"> 
 
-         <li><a href="C:\Users\mysan\OneDrive\Skrivbord\projektcode\level2\Untitled-1.html"><button class="button"><h3>Level 1</h3></button></a></li>
+         <li><a href="level1.html"><button class="button"><h3>Programming</h3></button></a></li>
          <br>
-        <li><a href="C:\Users\mysan\OneDrive\Skrivbord\projektcode\level2.html"><button class="button"><h3>Level 2</h3></button></a></li>
+        <li><a href="level2.html"><button class="button"><h3>Star Wars</h3></button></a></li>
         <br>
-         <li><a href="C:\Users\mysan\OneDrive\Skrivbord\projektcode\level3.html"><button class="button"><h3>Level 3</h3></button></a></li>
+         <li><a href="level3.html"><button class="button"><h3>Super Mario</h3></button></a></li>
          <br>
          <br>
-         <li><button class="button" ><h2>How to play</h2></button></a></li>
+         <li><a href="howto.html"><button class="button" ><h2>How to play</h2></button></a></li>
 
      
     </ul>
@@ -39,3 +39,5 @@
 
 </body>
 </html>
+
+
