--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
        
       <ul class="List"> 
 
-         <li><a href="level1.html"><button class="button"><h3>Programming</h3></button></a></li>
+         <li><a href="programming.html"><button class="button"><h3>Programming</h3></button></a></li>
          <br>
-        <li><a href="level2.html"><button class="button"><h3>Star Wars</h3></button></a></li>
+        <li><a href="starwars.html"><button class="button"><h3>Star Wars</h3></button></a></li>
         <br>
-         <li><a href="level3.html"><button class="button"><h3>Super Mario</h3></button></a></li>
+         <li><a href="supermario.html"><button class="button"><h3>Super Mario</h3></button></a></li>
          <br>
          <br>
          <li><a href="howto.html"><button class="button" ><h2>How to play</h2></button></a></li>
